--- a/assets/monitor.html
+++ b/assets/monitor.html
@@ -39,9 +39,9 @@
             <small id="roomInfo"></small>
         </div>
 
-        <div class="row justify-content-center w-100 text-white">
-            <ul id="playersInRoom"></ul>
-            <ul id="playersWaiting"></ul>
+        <div class="row justify-content-center w-100 text-white mt-4">
+            <h4 class="fs-4">Players</h4>
+            <ul id="players"></ul>
         </div>
      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
