--- a/assets/room.html
+++ b/assets/room.html
@@ -15,6 +15,11 @@
                 <!-- First Section (lifes-container) -->
                 <div id="lifes-container" class="w-100 d-flex gap-2 align-items-center justify-content-center flex-grow-1">
                     <!-- Insert lifes content here -->
+                     <div class="heart"></div>
+                     <div class="heart"></div>
+                     <div class="heart"></div>
+                     <div class="heart"></div>
+                     <div class="heart"></div>
                 </div>
             
                 <!-- Second Section (countdown and score) -->
