--- a/assets/test-rfid.html
+++ b/assets/test-rfid.html
@@ -21,9 +21,9 @@
                     min="1"
                     placeholder="2">
                 <label for="numberOfPlayers">Number of Players</label>
-                <div id="warningMessage" class="text-danger mt-2" style="display: none;">
+                <small id="warningMessage" class="text-danger mt-2" style="display: none;">
                     Please enter a valid number(Max: 6, Min: 1)
-                </div>
+                </small>
             </div>
             <button id="addPlayer" class="btn btn-primary w-50">Add Players</button>
         </div>
