--- a/assets/test-rfid.html
+++ b/assets/test-rfid.html
@@ -12,7 +12,7 @@
         <h4 class="text-white">RFID Scan</h4>
         <div class="d-flex w-100 flex-column gap-2 align-items-center">
             
-            <div class="form-floating mb-3 w-50" style="height: 80px;">
+            <!-- <div class="form-floating mb-3 w-50" style="height: 80px;">
                 <input 
                     class="form-control"
                     type="number" 
@@ -24,8 +24,14 @@
                 <small id="warningMessage" class="text-danger mt-2" style="display: none;">
                     Please enter a valid number(Max: 6, Min: 1)
                 </small>
-            </div>
-            <button id="addPlayer" class="btn btn-primary w-50">Add Players</button>
+            </div> 
+            <button id="addPlayer" class="btn btn-primary w-50">Add Players</button> -->
+            <button class="add-player btn btn-primary w-50" data-number="1">Add 1 Player</button>
+            <button class="add-player btn btn-primary w-50" data-number="2">Add 2 Player</button>
+            <button class="add-player btn btn-primary w-50" data-number="3">Add 3 Player</button>
+            <button class="add-player btn btn-primary w-50" data-number="4">Add 4 Player</button>
+            <button class="add-player btn btn-primary w-50" data-number="5">Add 5 Player</button>
+            <button class="add-player btn btn-primary w-50" data-number="6">Add 6 Player</button>
         </div>
     </div>
 
