--- a/assets/door.html
+++ b/assets/door.html
@@ -71,9 +71,7 @@
         </div>
     </div>
 
-    <div id="door-message" class="container h-100 d-none justify-content-center align-items-center">
-        
-    </div>
+    <div id="door-message" class="container h-100 d-none flex-column justify-content-center align-items-center"></div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/door.js"></script>
